--- a/.github/workflows/check-bioc.yaml
+++ b/.github/workflows/check-bioc.yaml
@@ -141,7 +141,7 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           ## Edit below if you have any Windows system dependencies
-          choco install XML
+          choco install libxml2
         shell: Rscript {0}
 
       - name: Install BiocManager
