Explicit XML install for Windows with specific version

--- a/.github/workflows/check-bioc.yaml
+++ b/.github/workflows/check-bioc.yaml
@@ -142,7 +142,7 @@ jobs:
         run: |
           ## Edit below if you have any Windows system dependencies
           message(paste('****', Sys.time(), 'installing XML ****'))
-          remotes::install_cran("XML", build=FALSE)
+          remotes::install_cran("XML", build=FALSE, version="3.99-0.13")
         shell: Rscript {0}
 
       - name: Install BiocManager
