--- a/.github/workflows/check-bioc.yaml
+++ b/.github/workflows/check-bioc.yaml
@@ -102,16 +102,16 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ env.R_LIBS_USER }}
-          key: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_3_15-$${{ matrix.config.r }}-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_3_15-r-${{ matrix.config.r }}-
+          key: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_$${{ matrix.config.bioc }}-$${{ matrix.config.r }}-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_$${{ matrix.config.bioc }}-r-${{ matrix.config.r }}-
 
       - name: Cache R packages on Linux
         if: "!contains(github.event.head_commit.message, '/nocache') && runner.os == 'Linux' "
         uses: actions/cache@v3
         with:
           path: /home/runner/work/_temp/Library
-          key: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_3_15-r-${{ matrix.config.r }}--${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_3_15-r-${{ matrix.config.r }}-
+          key: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_$${{ matrix.config.bioc }}-r-${{ matrix.config.r }}--${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_$${{ matrix.config.bioc }}-r-${{ matrix.config.r }}-
 
       - name: Install Linux system dependencies
         if: runner.os == 'Linux'
@@ -142,7 +142,7 @@ jobs:
         run: |
           ## Edit below if you have any Windows system dependencies
           message(paste('****', Sys.time(), 'installing XML ****'))
-          remotes::install_cran("XML", build=FALSE, version="3.99-0.13")
+          remotes::install_version("XML",  version="3.99-0.13")
         shell: Rscript {0}
 
       - name: Install BiocManager
