--- a/.github/workflows/check-bioc.yaml
+++ b/.github/workflows/check-bioc.yaml
@@ -53,7 +53,7 @@ jobs:
         config:
           - { os: ubuntu-latest, r: '4.2.2', bioc: '3.16', cont: "bioconductor/bioconductor_docker:RELEASE_3_16", rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest" }
           - { os: macOS-latest, r: '4.2.2', bioc: '3.16'}
-          - { os: windows-latest, r: '4.2.2', bioc: '3.16'}
+         ## - { os: windows-latest, r: '4.2.2', bioc: '3.16'}
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
@@ -141,8 +141,6 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           ## Edit below if you have any Windows system dependencies
-          message(paste('****', Sys.time(), 'installing XML ****'))
-          remotes::install_version("XML",  version="<= 3.99-0.13")
         shell: Rscript {0}
 
       - name: Install BiocManager
