--- a/.github/workflows/check-bioc.yaml
+++ b/.github/workflows/check-bioc.yaml
@@ -117,7 +117,7 @@ jobs:
       - name: Install Linux system dependencies
         if: runner.os == 'Linux'
         run: |
-          sysreqs=$(Rscript -e 'remotes::system_requirements("ubuntu", "20.04"')
+          sysreqs=$(Rscript -e 'remotes::system_requirements("ubuntu", "20.04")')
           echo $sysreqs
           sudo -s eval "$sysreqs"
 
