--- a/.github/workflows/check-bioc.yaml
+++ b/.github/workflows/check-bioc.yaml
@@ -117,9 +117,9 @@ jobs:
       - name: Install Linux system dependencies
         if: runner.os == 'Linux'
         run: |
-          sysreqs=$(Rscript -e 'remotes::system_requirements("ubuntu", "20.04")')
-          echo $sysreqs
-          sudo -s eval "$sysreqs"
+          ##sysreqs=$(Rscript -e 'remotes::system_requirements("ubuntu", "20.04")')
+          ##echo $sysreqs
+          ##sudo -s eval "$sysreqs"
 
           ## sysreqs=$(Rscript -e 'cat("apt-get update -y && apt-get install -y", paste(gsub("apt-get install -y ", "", remotes::system_requirements("ubuntu", "20.04")), collapse = " "))')
          ## echo $sysreqs
