--- a/.github/workflows/check-bioc.yaml
+++ b/.github/workflows/check-bioc.yaml
@@ -51,11 +51,12 @@ jobs:
       fail-fast: false
       matrix:
         config:
-         ## - { os: ubuntu-latest, r: '4.4', bioc: '3.19', cont: "bioconductor/bioconductor_docker:RELEASE_3_19", rspm: "https://packagemanager.posit.co/cran/__linux__/jammy/latest" }
-          - { os: ubuntu-latest, r: '4.4.1', bioc: '3.20', cont: "bioconductor/bioconductor_docker:RELEASE_3_20", rspm: "https://packagemanager.posit.co/cran/__linux__/jammy/latest" }
+         - { os: ubuntu-latest, r: '4.4', bioc: '3.19', cont: "bioconductor/bioconductor_docker:RELEASE_3_19", rspm: "https://packagemanager.posit.co/cran/__linux__/jammy/latest" }
+         ## - { os: ubuntu-latest, r: '4.4.1', bioc: '3.20', cont: "bioconductor/bioconductor_docker:RELEASE_3_20", rspm: "https://packagemanager.posit.co/cran/__linux__/jammy/latest" }
          ## - { os: macOS-latest, r: '4.4', bioc: '3.19'}
-          - { os: macOS-latest, r: '4.4.1', bioc: '3.20'}
+         - { os: macOS-latest, r: '4.4.1', bioc: '3.20'}
          ## - { os: windows-latest, r: '4.2.2', bioc: '3.16'}
+         ## - { os: windows-latest, r: '4.4.1', bioc: '3.20'}
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
