--- a/.github/workflows/check-bioc.yaml
+++ b/.github/workflows/check-bioc.yaml
@@ -56,7 +56,8 @@ jobs:
          ## - { os: macOS-latest, r: '4.4', bioc: '3.19'}
          - { os: macOS-latest, r: '4.4.1', bioc: '3.20'}
          ## - { os: windows-latest, r: '4.2.2', bioc: '3.16'}
-         ## - { os: windows-latest, r: '4.4.1', bioc: '3.20'}
+         - { os: windows-latest, r: '4.4.1', bioc: '3.20'}
+         
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
